# Data533_Assignment

./: .coverage  .travis.yml  README.md  Test.ipynb  TestSuite.ipynb  Test_teamstats_basic.ipynb  Test_teamstats_basic.py  Test_teamstats_toplists.ipynb  Test_teamstats_toplists.py  Untitled.ipynb  Untitled1.ipynb  goalies2008.csv  goalies2020.csv  goalies2021.csv  playerModulesDraft.ipynb  pyproject.toml  setup.py  skaters.py  untitled.txt  untitled1.txt
.ipynb_checkpoints/: README-checkpoint.md  TestSuite-checkpoint.ipynb  TestSuite-checkpoint.py  Test_teamstats_basic-checkpoint.ipynb  Test_teamstats_basic-checkpoint.py  playerTest-checkpoint.ipynb  test_get_player_stats-checkpoint.py  test_goalie-checkpoint.py
hockey/: Team2020.csv  Team2021.csv  Team2022.csv  goalies2022.csv  goalies2024.csv
hockey/.ipynb_checkpoints/: setup-checkpoint.py
hockey/player/: __init__.py  get_player_stats.py  goalie.py  goalies2024.csv  player.py  skater.py  skaters2024.csv
hockey/player/.ipynb_checkpoints/: get_player_stats-checkpoint.py  player-checkpoint.py  skater-checkpoint.py
hockey/teamstats/: basic.py  toplists.py
player/: goalies.py  player.py  skaters2021.csv
player/data/: skaters2022.csv  skaters2023.csv
src/HockeyPackage.egg-info/: PKG-INFO  SOURCES.txt
src/hockey/: Team2023.csv  Team2024.csv  goalies2021.csv  goalies2023.csv  setup.py
tests/: Test.ipynb  TestSuite.ipynb  TestSuite.py  Test_teamstats_basic.py  Test_teamstats_toplists.py  test_get_player_stats.py  test_player.py  test_skater.py
tests/.ipynb_checkpoints/: TestSuite-checkpoint.ipynb
(+10 files in other folders)
