[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "HockeyPackage"
version = "0.0.1"
authors = [
  { name = "Tyler Stevenson" },
  { name = "Foster Lockerbie" }
]
description = "A package for hockey stats"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent"
]
[project.urls]
Homepage = "https://github.com/stev7198/Data533_Assignment"
